--- a/.github/prompts/a11y.prompt.md
+++ b/.github/prompts/a11y.prompt.md
@@ -37,3 +37,9 @@ When evaluating, consider these main WCAG 2.1 Level A success criteria:
 4. Additional suggestions to improve accessibility (optional)
 
 Keep in mind that accessibility improvements can be made incrementally, and please prioritize proposing solutions for the most important and impactful issues first.
+
+### Focus Visualization
+
+Madogiwa UI implements minimal focus visualization to respect native browser focus indicators across Firefox, Safari, Google Chrome, and other browsers, ensuring optimal accessibility.
+
+We believe that browser-native focus indicators are specifically designed and tested for accessibility compliance.
