docs: centralize copilot prompts, add vue prompt, tidy READMEs
Consolidate documentation and Copilot prompt references by moving links to the unified .github/prompts directory and removing duplicated sections across READMEs. Add a full vue.prompt.md, improve css.prompt.md (add optional transition, storybook & a11y references, sample story), surface CSS architecture link in css-component-review prompt, and normalize the a11y focus visualization heading. Update .github/copilot-instructions.md to point to ./prompts and expand lint/build/test commands. Simplify packages/css and packages/vue README files to reference the prompt docs and add missing build:docs and test entries where appropriate.

Why: reduce duplication, centralize contributor guidance, and provide clearer, more complete prompts/examples (including Storybook accessibility play example and a dedicated Vue guide) for consistent onboarding and automated tooling.

--- a/.github/prompts/a11y.prompt.md
+++ b/.github/prompts/a11y.prompt.md
@@ -38,7 +38,7 @@ When evaluating, consider these main WCAG 2.1 Level A success criteria:
 
 Keep in mind that accessibility improvements can be made incrementally, and please prioritize proposing solutions for the most important and impactful issues first.
 
-### Focus Visualization
+## Focus Visualization
 
 Madogiwa UI implements minimal focus visualization to respect native browser focus indicators across Firefox, Safari, Google Chrome, and other browsers, ensuring optimal accessibility.
 
